fix(places/page): resolve overflow on mobile, add links in anchor and replaces name class to places

--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -2,28 +2,25 @@
     display: flex;
     flex-direction: column;
     max-width: 830px;
-    padding: 34.94px 302px 59px 148px;
+    padding: 34.94px 302px 57.06px 148px;
 }
 
 .intro__title{
     font-size: 54px;
-    height: 173.92px;
     margin: 0 0 32px;
 }
 
 .intro__text{
     font-size: 24px;
-    line-height: 1.5;
     font-family: "Inter-Regular", sans-serif;
     max-width: 738px;
-    height: 135.66px;
     margin: 0;
 }
 
 .intro__text_author{
     max-width: 732px;
-    margin: 10px 0 32.53px;
-    height: 33.91px;
+    max-height: 34px;
+    margin: 10px 0 32px;
     display: flex;
     justify-content:flex-end;
     font-family: "Inter-Regular", sans-serif;
@@ -34,70 +31,66 @@
 .intro__text_small{
     max-width: 722px;
     font-size: 16px;
-    line-height: 1.5;
     height: 181.54px;
 }
 
 @media screen and (max-width: 1024px){
     .intro{
-        max-width: 95.66%;
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+        max-width: 720px;
         width: 100%;
-        padding: 45px 24px 44px;
-        height: 573px;
+        padding: 45px 0 44px;
     }
     .intro__title{
         font-size: 45px;
-        height: 147px;
         margin: 0 0 50px;
-        max-width: 98.195%;
+        max-width: 100%;
     }
     .intro__text{
         font-size: 24px;
         max-width: 100%;
+        height: auto;
     }
     .intro__text_author{
         max-width: 100%;
         margin: 26px 0 32px;
+        max-height: 32px;
         font-size: 24px;
-        height: 33.91px;
     }
     .intro__text_small{
         max-width: 100%;
         font-size: 16px;
-        height: 182px;
     }
 }
 
 @media screen and (max-width: 544px){
     .intro{
-        padding: 32px 16px;
+        padding: 32px 0;
         max-width: 288px;
         width: 100%;
-        min-height: 1033px;
     }
     .intro__title{
         font-size: 32px;
         margin-bottom: 40px;
-        max-width: 288px;
+        max-width: 100%;
         width: 100%;
-        max-height: 175px;
-        height: 100%;
     }
     .intro__text{
         font-size: 24px;
-        max-width: 288px;
+        max-width: 100%;
         width: 100%;
     }
     .intro__text_author{
         font-size: 24px;
-        max-width: 288px;
+        max-width: 100%;
         width: 100%;
+        max-height: 34px;
         margin: 10px 0 32px;
     }
     .intro__text_small{
         max-width: 288px;
-        max-height: 442px;
-        height: 100%;
         width: 100%;
         font-size: 16px;
     }
