--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,11 +4,12 @@
     min-width: 320px;
     max-width: 1280px;
     margin: 0 auto;
+    justify-content: center;
+
 }
 
-@media screen and (max-width: 554px) {
-    .page{
-        margin: 0;
-        min-height: 1705px;
-    }
+@media screen and (max-width: 544px){
+  body{
+    overflow-x: hidden;
+  }
 }
